Archive2/08/42635de289b0d5/output
+ g++-4.8 -std=c++11 -O3 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:50:5: error: static assertion failed: ...
     static_assert(Callable<D>::value, "...");
     ^
main.cpp:51:5: error: static assertion failed: ...
     static_assert(Callable<E>::value, "...");
     ^
